--- a/src/features/post/Post.module.css
+++ b/src/features/post/Post.module.css
@@ -35,7 +35,6 @@
 .arrows {
     grid-area: 1 / 1 / 3 / 2;
     width: 100px;
-    
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
@@ -79,8 +78,8 @@
 }
 
 .image img {
-    width: 100%; 
-    
+    width: 100%;
+
     object-fit: cover;
 }
 
@@ -101,15 +100,16 @@
     margin: 0.5rem;
 }
 
-/*
-Consolidated the .grid-container into .container
-.grid-container {
-    display: grid;
-    max-width: 100%;
-    max-height: 100%;
-    grid-template-columns: 10% 45% 45%;
-    grid-template-rows: repeat(7, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+
+@media screen and (max-width: 600px) {
+    .image {
+        grid-area: 2 / 2 / 6 / 4;
+        max-width: 290px;
+        max-height: 290px;
+    }
+
+    .subline {
+        grid-area: 6 / 2 / 8 / 4;
+    }
+
 }
-*/
